add to endpoint for category first to app and the second to platform same this in questions and add new schema in database name is appLink have two link app ios and android link in play store and app story and edit the contact us schema
